Fix vulnerable package

--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
 		"pretty-bytes": "^6.1.1",
 		"svelte-floating-ui": "^1.5.9",
 		"svelte-highlight": "^7.8.2"
+	},
+	"overrides": {
+		"@sveltejs/kit": {
+			"cookie": "^0.7.0"
+		}
 	}
 }
