--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@nais/ds-svelte-community": "^1.0.2",
 		"@navikt/ds-css": "7.22.0",
+		"@navikt/ds-tailwind": "^7.28.1",
 		"@storybook/addon-docs": "^9.1.8",
 		"@storybook/addon-svelte-csf": "^5.0.8",
 		"@storybook/addon-themes": "^9.1.8",
@@ -31,10 +32,13 @@
 		"@sveltejs/kit": "2.43.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/amplitude-js": "^8.16.5",
+		"@types/d3-array": "^3.2.1",
+		"@types/d3-time": "^3.0.4",
 		"@types/luxon": "^3.7.1",
 		"@types/sortablejs": "^1.15.8",
 		"@typescript-eslint/eslint-plugin": "^8.44.1",
 		"@typescript-eslint/parser": "^8.44.1",
+		"@tailwindcss/vite": "^4.1.12",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -46,9 +50,11 @@
 		"lint-staged": "^16.2.3",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"storybook": "^9.1.8",
 		"svelte": "5.39.6",
 		"svelte-check": "^4.3.2",
+		"tailwindcss": "^4.1.12",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
@@ -68,10 +74,11 @@
 		"bytes-iec": "^3.1.1",
 		"cron-parser": "^5.4.0",
 		"cronstrue": "^3.3.0",
-		"echarts": "^6.0.0",
+		"d3-scale": "^4.0.2",
 		"eslint-plugin-unicorn": "^61.0.2",
 		"graphql": "^16.11.0",
 		"graphql-sse": "^2.5.4",
+		"layerchart": "^2.0.0-next.39",
 		"luxon": "^3.7.2",
 		"pretty-bytes": "^7.1.0",
 		"sortablejs": "^1.15.6",
