--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 		"lint": "prettier --check . && eslint .",
 		"eslint": "eslint .",
 		"format": "prettier --write .",
-		"check-outdated-interactive": "ncu -x '@nais/ds-svelte-community' -i -u && npm install",
+		"check-outdated": "node check-updates-cooldown.mjs",
+		"update-outdated": "node check-updates-cooldown.mjs --install",
+		"check-age": "node check-package-age.mjs",
+		"install-safe": "npx npq install",
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
@@ -31,12 +34,12 @@
 		"@lavamoat/preinstall-always-fail": "^2.1.1",
 		"@layerstack/utils": "^2.0.0-next.16",
 		"@nais/ds-svelte-community": "^2.0.0-next.4",
-		"@storybook/addon-docs": "^10.0.8",
+		"@storybook/addon-docs": "10.1.3",
 		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-themes": "^10.0.8",
-		"@storybook/sveltekit": "^10.0.8",
+		"@storybook/addon-themes": "10.1.3",
+		"@storybook/sveltekit": "10.1.3",
 		"@sveltejs/adapter-node": "^5.4.0",
-		"@sveltejs/kit": "2.49.0",
+		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/d3-array": "^3.2.2",
@@ -46,7 +49,7 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "10.0.8",
+		"eslint-plugin-storybook": "10.1.3",
 		"eslint-plugin-svelte": "^3.13.0",
 		"globals": "^16.5.0",
 		"houdini": "^2.0.0-next.11",
@@ -55,18 +58,18 @@
 		"lint-staged": "^16.2.7",
 		"lockfile-lint": "^4.14.1",
 		"npm-check-updates": "^19.1.2",
-		"npq": "^3.14.0",
-		"prettier": "^3.6.2",
+		"npq": "^3.15.2",
+		"prettier": "^3.7.3",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.1",
-		"storybook": "^10.0.8",
-		"svelte": "5.44.0",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"storybook": "10.1.3",
+		"svelte": "^5.45.3",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.48.0",
-		"vite": "^7.2.4",
-		"vitest": "^4.0.13"
+		"typescript-eslint": "^8.48.1",
+		"vite": "^7.2.6",
+		"vitest": "^4.0.14"
 	},
 	"type": "module",
 	"dependencies": {
@@ -74,7 +77,7 @@
 		"@codemirror/state": "^6.5.2",
 		"@codemirror/theme-one-dark": "^6.1.3",
 		"@codemirror/view": "^6.38.8",
-		"@prometheus-io/codemirror-promql": "^0.307.3",
+		"@prometheus-io/codemirror-promql": "^0.308.0",
 		"@slack/types": "^2.19.0",
 		"@slack/web-api": "^7.13.0",
 		"cron-parser": "^5.4.0",
@@ -94,9 +97,9 @@
 		}
 	},
 	"lint-staged": {
-		"*.{js,ts,svelte,gql,css,md,json}": "prettier --write .",
+		"*.{js,ts,svelte,gql,css,md,json}": "prettier --write",
 		"*.{js,ts,svelte,gql}": [
-			"eslint --fix .",
+			"eslint --fix",
 			"svelte-check --tsconfig ./tsconfig.json --fail-on-warnings"
 		]
 	},
